# MSCCD

./: .editorconfig  .gitignore  controller.py  flake.nix  pyproject.toml  tokenizerGeneration.py  treefmt.toml
modules/: Analysis.py  CloneDetection(recall).py  CloneDetection.py  Config.py  DetectionTaskManagement.py  G4rewrite.py  InputManagement.py  Logger.py  ParserManagement.py  globalTokenFrequency.py  reportManagement.py  tBG(before).py  tokenBagGeneration.py
